infrastructure/base/controllers/weave-gitops/istio.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: weave-gitops
  namespace: weave
spec:
  hosts:
    - weave.${DOMAIN}
  gateways:
    - istio-system/fin-gw
  http:
    - name: primary
      match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: weave-gitops.weave.svc.cluster.local
            port:
              number: 9001
      timeout: 3600s
      headers:
        response:
          set:
            X-Frame-Options: "SAMEORIGIN"
